A new class DDVCSKine and a derivative class ElectronDDVCSKine are created.
By providing necessary LorentzVectors of FS particles, it calculates the reaction kinematics.

This is still work in progress, but the class already is functioning. In particular
for the case, when the user provides all 4 FS particles, it calculates the full kinematics.

Corresponding CMakeLists.txt file is modified.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,11 +19,11 @@ SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)   # shared libs
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)   # static libs
 
-include_directories(${PROJECT_SOURCE_DIR}/include ${ROOT_INCLUDE_DIR})
+include_directories(${PROJECT_SOURCE_DIR}/include ${ROOT_INCLUDE_DIRS})
 set(DDVCS_SOURCE_FILES
-  "${PROJECT_SOURCE_DIR}/src/DDVCSTools.cc" )
+  "${PROJECT_SOURCE_DIR}/src/DDVCSTools.cc" "${PROJECT_SOURCE_DIR}/src/DDVCSKine.cc" "${PROJECT_SOURCE_DIR}/src/ElectronDDVCSKine.cc")
 set(DDVCS_HEADERS
-  "${PROJECT_SOURCE_DIR}/include/DDVCSTools.h" )
+  "${PROJECT_SOURCE_DIR}/include/DDVCSTools.h"  )
 add_library(DDVCSToolslib SHARED ${DDVCS_SOURCE_FILES})
 set_target_properties(DDVCSToolslib PROPERTIES VERSION ${PROJECT_VERSION} SOVERSION 1)
 set (CMAKE_INSTALL_LIBDIR "lib")
