* DDVCSTools.h: Nothing is changed here just a small newline is added (accidentally)
* AnaGEMC.cc: Added exit(1); when it was
checking for the run number. Somehow this was missing in the code.

AnaElectronDDVCS.cc: This is a new file that should do a higher level analysis on DDVCS,
it is essentially empty (only main is defined).

* AnaData/CMakeLists.txt: reflects the addition of the AnaElectronDDVCS.cc file.

--- a/AnaData/CMakeLists.txt
+++ b/AnaData/CMakeLists.txt
@@ -7,29 +7,36 @@ include_directories(${INCLUDES})
 link_directories(${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_VERBOSE_MAKEFILE ON)
 
-################################  AnaData.cc  ##########################################
+################################  Executables  ##########################################
 add_executable(AnaData.exe AnaData.cc)
 target_link_libraries(AnaData.exe Hipo4 ${ROOT_LIBRARIES} ${CLAS12AnaTools_LIBRARIES} )
-#################################################################################################
 
-################################  AnaDDVCS.cc ##########################################
 add_executable(AnaDDVCS.exe AnaDDVCS.cc)
-target_link_libraries(AnaDDVCS.exe Hipo4 ${ROOT_LIBRARIES} ${CLAS12AnaTools_LIBRARIES} )
-#################################################################################################
+target_link_libraries(AnaDDVCS.exe Hipo4 ${ROOT_LIBRARIES} ${CLAS12AnaTools_LIBRARIES} DDVCSToolslib )
 
-################################  AnaDDVCSOSG.cc ##########################################
 add_executable(AnaDDVCSOSG.exe AnaDDVCSOSG.cc)
 target_link_libraries(AnaDDVCSOSG.exe Hipo4 ${ROOT_LIBRARIES} ${CLAS12AnaTools_LIBRARIES} )
+
+add_executable(TriggerStudy TriggerStudy.cc)
+set_target_properties(TriggerStudy PROPERTIES OUTPUT_NAME "TriggerStudy.exe")
+target_link_libraries(TriggerStudy Hipo4 ${ROOT_LIBRARIES} ${CLAS12AnaTools_LIBRARIES})
+
+add_executable(AnaElectronDDVCS AnaElectronDDVCS.cc)
+set_target_properties(AnaElectronDDVCS PROPERTIES OUTPUT_NAME "AnaElectronDDVCS")
+target_link_libraries(AnaElectronDDVCS Hipo4 ${ROOT_LIBRARIES} ${CLAS12AnaTools_LIBRARIES} )
 #################################################################################################
 
 ################################ Installing Executable targets #############################
-install( TARGETS AnaData.exe AnaDDVCS.exe AnaDDVCSOSG.exe
+install( TARGETS AnaData.exe AnaDDVCS.exe AnaDDVCSOSG.exe TriggerStudy AnaElectronDDVCS
   DESTINATION ${CMAKE_INSTALL_PREFIX}/AnaData/bin )
 
 ################################ Installing Non target files ###############################
 install( FILES OSG_Validate.cc DrawPlots1.cc SkimOverAllRuns.py RunAllFilesOfRun.py  SkimOverAllRuns_v2.py
   DESTINATION ${CMAKE_INSTALL_PREFIX}/AnaData/bin)
 
+install( FILES RunSettings.dat
+  DESTINATION ${CMAKE_INSTALL_PREFIX}/AnaData)
+
 ################################ Installing needed directores ##############################
-install( DIRECTORY Skim_Data Skims_F18_Outbending Skims_F18_InbendingEarly Skims_F18_Inbending Figs OSG_ValidateFigs inpHipoFiles
+install( DIRECTORY Skim_Data Skims_F18_Outbending Skims_F18_InbendingEarly Skims_F18_Inbending Figs OSG_ValidateFigs inpHipoFiles HistData
   DESTINATION ${CMAKE_INSTALL_PREFIX}/AnaData/ )
